planner_cspace: crowd escape mode (#763)
- Extend temporary_escape feature to gradually get closer to the goal even if the goal is unreachable
  - Choose temporary goal with:
    - Reachable from the current pose on the dynamic map
    - Point with smallest distance from the goal on the static map
- Add topic to trigger updating temporary escape goal
  - Using topic instead of service to allow updating temporary goal frequently
- Also fix temporary escape feature which was broken by #708
  - goal_ may be changed by temporary escape feature and can be far from goal_raw_. But #708 assume goal_ is always close to the goal_raw_

--- a/neonavigation_launch/config/navigate.yaml
+++ b/neonavigation_launch/config/navigate.yaml
@@ -34,6 +34,10 @@ planner_3d:
   remember_updates: true
   hist_ignore_range: 0.0
   hist_ignore_range_max: 1.5
+  esc_range: 1.0
+  esc_range_min_ratio: 0.5
+  temporary_escape_tolerance_lin: 0.2
+  keep_a_part_of_previous_path: true
 spur:
   hz: 30.0
   k_dist: 16.0
