--- a/safety_limiter/test/CMakeLists.txt
+++ b/safety_limiter/test/CMakeLists.txt
@@ -16,6 +16,14 @@ target_link_libraries(test_safety_limiter2 ${catkin_LIBRARIES} ${nav_msgs_LIBRAR
 target_include_directories(test_safety_limiter2 PUBLIC ${nav_msgs_INCLUDE_DIRS} ${tf2_geometry_msgs_INCLUDE_DIRS})
 add_dependencies(test_safety_limiter2 safety_limiter)
 
+add_rostest_gtest(test_safety_limiter3
+  test/safety_limiter3_rostest.test
+  src/test_safety_limiter3.cpp
+)
+target_link_libraries(test_safety_limiter3 ${catkin_LIBRARIES} ${nav_msgs_LIBRARIES} ${tf2_geometry_msgs_LIBRARIES})
+target_include_directories(test_safety_limiter3 PUBLIC ${nav_msgs_INCLUDE_DIRS} ${tf2_geometry_msgs_INCLUDE_DIRS})
+add_dependencies(test_safety_limiter3 safety_limiter)
+
 add_rostest_gtest(test_safety_limiter_compat
   test/safety_limiter_compat_rostest.test
   src/test_safety_limiter.cpp
