--- a/joystick_interrupt/CMakeLists.txt
+++ b/joystick_interrupt/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.1.3...3.26)
 project(joystick_interrupt)
 
 set(CATKIN_DEPENDS
