Test crowd mode with remember updates

--- a/planner_cspace/test/CMakeLists.txt
+++ b/planner_cspace/test/CMakeLists.txt
@@ -126,6 +126,11 @@ add_rostest_gtest(test_navigate_remember
 target_link_libraries(test_navigate_remember ${catkin_LIBRARIES})
 add_dependencies(test_navigate_remember planner_3d patrol)
 
+add_rostest(test/navigation_remember_rostest.test
+  ARGS enable_crowd_mode:=true
+  DEPENDENCIES test_navigate_remember
+)
+
 add_rostest(test/navigation_compat_rostest.test
   DEPENDENCIES test_navigate
 )
