--- a/planner_cspace/cfg/Planner3D.cfg
+++ b/planner_cspace/cfg/Planner3D.cfg
@@ -14,6 +14,8 @@ gen.add("costmap_watchdog", double_t, 0, "", 0.0, 0.0, 100.0)
 gen.add("max_vel", double_t, 0, "", 0.3, 0.0, 100.0)
 gen.add("max_ang_vel", double_t, 0, "", 0.6, 0.0, 100.0)
 gen.add("min_curve_radius", double_t, 0, "", 0.1, 0.0, 100.0)
+gen.add("motion_primitive_type", int_t, 0, "0: DEFAULT, 1: BEZIER", 0, 0, 1)
+gen.add("bezier_cp_dist", double_t, 0, "Distance of Bezier control points from start/end", 0.1, 0.0, 1.0)
 gen.add("weight_decel", double_t, 0, "", 50.0, 0.0, 1000.0)
 gen.add("weight_backward", double_t, 0, "", 0.9, 0.0, 1000.0)
 gen.add("weight_ang_vel", double_t, 0, "", 1.0, 0.0, 1000.0)
